// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI Snapshot Tests > complete game sequence 1`] = `
"🃏 Poker Pocket CLI
Type "help" for commands
Betting: ON | Blinds: 50/100 | Default stack: 10000
Players: 2, Phase: IDLE
Available: deal, players <n>

> Players set to 3
Players: 3, Phase: IDLE
Available: deal, players <n>

> Seed set to 123 for next deal
> Cards dealt! Blinds posted.
Players: 3, Phase: PREFLOP

💰 Pot: 150 | Current bet: 100
Players:
  P1 (D): 10000 chips ← TO ACT
  P2: 9950 chips [50 in pot]
  P3: 9900 chips [100 in pot]
P1 actions: fold, call, raise <amount> (200-10000), allin

> Complete the betting round first!
> Complete the betting round first!
> Complete the betting round first!
> Complete the betting round first!
> Goodbye!"
`;

exports[`CLI Snapshot Tests > deal command output 1`] = `
"🃏 Poker Pocket CLI
Type "help" for commands
Betting: ON | Blinds: 50/100 | Default stack: 10000
Players: 2, Phase: IDLE
Available: deal, players <n>

> Players set to 3
Players: 3, Phase: IDLE
Available: deal, players <n>

> Seed set to 42 for next deal
> Cards dealt! Blinds posted.
Players: 3, Phase: PREFLOP

💰 Pot: 150 | Current bet: 100
Players:
  P1 (D): 10000 chips ← TO ACT
  P2: 9950 chips [50 in pot]
  P3: 9900 chips [100 in pot]
P1 actions: fold, call, raise <amount> (200-10000), allin

> Players: 3, Phase: PREFLOP

💰 Pot: 150 | Current bet: 100
Players:
  P1 (D): 10000 chips ← TO ACT
  P2: 9950 chips [50 in pot]
  P3: 9900 chips [100 in pot]
P1 actions: fold, call, raise <amount> (200-10000), allin

> Goodbye!"
`;

exports[`CLI Snapshot Tests > error handling - invalid commands 1`] = `
"🃏 Poker Pocket CLI
Type "help" for commands
Betting: ON | Blinds: 50/100 | Default stack: 10000
Players: 2, Phase: IDLE
Available: deal, players <n>

> Unknown command: invalid-command
Type "help" for available commands

Quick commands: deal, flop, turn, river, showdown, status, players <n>
> Usage: players <number>
> Usage: players <number>
> Usage: seed <number>
> Usage: hole <player> (e.g. hole 1)
> No active betting round
> Goodbye!"
`;

exports[`CLI Snapshot Tests > error handling - out of range values 1`] = `
"🃏 Poker Pocket CLI
Type "help" for commands
Betting: ON | Blinds: 50/100 | Default stack: 10000
Players: 2, Phase: IDLE
Available: deal, players <n>

> Error: Players must be between 2 and 9
> Error: Players must be between 2 and 9
> Player must be 1-9
> Player must be 1-9
> No active betting round
> No active betting round
> Goodbye!"
`;

exports[`CLI Snapshot Tests > fold sequence 1`] = `
"🃏 Poker Pocket CLI
Type "help" for commands
Betting: ON | Blinds: 50/100 | Default stack: 10000
Players: 2, Phase: IDLE
Available: deal, players <n>

> Players set to 4
Players: 4, Phase: IDLE
Available: deal, players <n>

> Seed set to 777 for next deal
> Cards dealt! Blinds posted.
Players: 4, Phase: PREFLOP

💰 Pot: 150 | Current bet: 100
Players:
  P1 (D): 10000 chips
  P2: 9950 chips [50 in pot]
  P3: 9900 chips [100 in pot]
  P4: 10000 chips ← TO ACT
P4 actions: fold, call, raise <amount> (200-10000), allin

> P4 folds
Players: 4, Phase: PREFLOP

💰 Pot: 150 | Current bet: 100
Players:
  P1 (D): 10000 chips ← TO ACT
  P2: 9950 chips [50 in pot]
  P3: 9900 chips [100 in pot]
  P4: 10000 chips FOLDED
P1 actions: fold, call, raise <amount> (200-10000), allin

> P1 folds
Players: 4, Phase: PREFLOP

💰 Pot: 150 | Current bet: 100
Players:
  P1 (D): 10000 chips FOLDED
  P2: 9950 chips [50 in pot] ← TO ACT
  P3: 9900 chips [100 in pot]
  P4: 10000 chips FOLDED
P2 actions: fold, call, raise <amount> (150-9950), allin

> Players: 4, Phase: PREFLOP

💰 Pot: 150 | Current bet: 100
Players:
  P1 (D): 10000 chips FOLDED
  P2: 9950 chips [50 in pot] ← TO ACT
  P3: 9900 chips [100 in pot]
  P4: 10000 chips FOLDED
P2 actions: fold, call, raise <amount> (150-9950), allin

> P2 folds

P3 wins the pot!

Players: 4, Phase: PREFLOP

💰 Pot: 150 | Current bet: 100
Players:
  P1 (D): 10000 chips FOLDED
  P2: 9950 chips [50 in pot] FOLDED
  P3: 10050 chips [100 in pot]
  P4: 10000 chips FOLDED
Available: flop, fold <player>

> Players: 4, Phase: PREFLOP

💰 Pot: 150 | Current bet: 100
Players:
  P1 (D): 10000 chips FOLDED
  P2: 9950 chips [50 in pot] FOLDED
  P3: 10050 chips [100 in pot]
  P4: 10000 chips FOLDED
Available: flop, fold <player>

> Goodbye!"
`;

exports[`CLI Snapshot Tests > game state errors 1`] = `
"🃏 Poker Pocket CLI
Type "help" for commands
Betting: ON | Blinds: 50/100 | Default stack: 10000
Players: 2, Phase: IDLE
Available: deal, players <n>

> Error: Can only flop from preflop phase
> Error: Can only showdown from flop, turn, or river phase
> Players set to 3
Players: 3, Phase: IDLE
Available: deal, players <n>

> Seed set to 12345 for next deal
> Cards dealt! Blinds posted.
Players: 3, Phase: PREFLOP

💰 Pot: 150 | Current bet: 100
Players:
  P1 (D): 10000 chips ← TO ACT
  P2: 9950 chips [50 in pot]
  P3: 9900 chips [100 in pot]
P1 actions: fold, call, raise <amount> (200-10000), allin

> Error: Cannot change players mid-hand
> Complete the betting round first!
> Complete the betting round first!
> Complete the betting round first!
> Goodbye!"
`;

exports[`CLI Snapshot Tests > help command output 1`] = `
"🃏 Poker Pocket CLI
Type "help" for commands
Betting: ON | Blinds: 50/100 | Default stack: 10000
Players: 2, Phase: IDLE
Available: deal, players <n>

>
Commands:
  deal              - Deal new hand (with betting if enabled)
  flop              - Deal flop (3 community cards)
  turn              - Deal turn (4th community card)
  river             - Deal river (5th community card)
  showdown          - Evaluate hands and determine winner(s)
  players <n>       - Set number of players (2-9, IDLE only)
  hole <player>     - Show hole cards for player (1-based, e.g. hole 1)
  status            - Show current game state
  help              - Show this help
  q                 - Quit

Betting Commands:
  check             - Check (when no bet to call)
  call              - Call the current bet
  bet <amount>      - Bet specified amount (when no current bet)
  raise <amount>    - Raise by specified amount
  fold              - Fold your hand
  allin             - Go all-in with remaining chips

Betting Config:
  blinds <sb> <bb>  - Set small and big blind amounts
  ante <amount>     - Set ante amount (0 for none)
  stacks <amount>   - Set default starting stack
  button <player>   - Set dealer button position (0-based)

Advanced:
  seed <n>          - Set RNG seed for reproducible games

> Goodbye!"
`;

exports[`CLI Snapshot Tests > hole card reveal 1`] = `
"🃏 Poker Pocket CLI
Type "help" for commands
Betting: ON | Blinds: 50/100 | Default stack: 10000
Players: 2, Phase: IDLE
Available: deal, players <n>

> Players set to 3
Players: 3, Phase: IDLE
Available: deal, players <n>

> Seed set to 999 for next deal
> Cards dealt! Blinds posted.
Players: 3, Phase: PREFLOP

💰 Pot: 150 | Current bet: 100
Players:
  P1 (D): 10000 chips ← TO ACT
  P2: 9950 chips [50 in pot]
  P3: 9900 chips [100 in pot]
P1 actions: fold, call, raise <amount> (200-10000), allin

> P1: Qs Qc
> P2: 2s 9d
> P3: 9c 6s
> Goodbye!"
`;

exports[`CLI Snapshot Tests > players command output 1`] = `
"🃏 Poker Pocket CLI
Type "help" for commands
Betting: ON | Blinds: 50/100 | Default stack: 10000
Players: 2, Phase: IDLE
Available: deal, players <n>

> Players set to 3
Players: 3, Phase: IDLE
Available: deal, players <n>

> Players: 3, Phase: IDLE
Available: deal, players <n>

> Goodbye!"
`;

exports[`CLI Snapshot Tests > seed command output 1`] = `
"🃏 Poker Pocket CLI
Type "help" for commands
Betting: ON | Blinds: 50/100 | Default stack: 10000
Players: 2, Phase: IDLE
Available: deal, players <n>

> Seed set to 123 for next deal
> Players: 2, Phase: IDLE
Available: deal, players <n>

> Goodbye!"
`;

exports[`CLI Unicode vs ASCII Tests > ascii mode output 1`] = `
"🃏 Poker Pocket CLI
Type "help" for commands
Betting: ON | Blinds: 50/100 | Default stack: 10000
Players: 2, Phase: IDLE
Available: deal, players <n>

> Players set to 2
Players: 2, Phase: IDLE
Available: deal, players <n>

> Seed set to 42 for next deal
> Cards dealt! Blinds posted.
Players: 2, Phase: PREFLOP

💰 Pot: 150 | Current bet: 100
Players:
  P1 (D): 9950 chips [50 in pot] ← TO ACT
  P2: 9900 chips [100 in pot]
P1 actions: fold, call, raise <amount> (150-9950), allin

> Betting round auto-completed
> Flop dealt!
Players: 2, Phase: FLOP
Board: 3h Td Qd

💰 Pot: 200
Players:
  P1 (D): 9900 chips
  P2: 9900 chips
Available: turn, showdown, fold <player>

> Goodbye!"
`;

exports[`CLI Unicode vs ASCII Tests > unicode mode output 1`] = `
"🃏 Poker Pocket CLI
Type "help" for commands
Betting: ON | Blinds: 50/100 | Default stack: 10000
Players: 2, Phase: IDLE
Available: deal, players <n>

> Players set to 2
Players: 2, Phase: IDLE
Available: deal, players <n>

> Seed set to 42 for next deal
> Cards dealt! Blinds posted.
Players: 2, Phase: PREFLOP

💰 Pot: 150 | Current bet: 100
Players:
  P1 (D): 9950 chips [50 in pot] ← TO ACT
  P2: 9900 chips [100 in pot]
P1 actions: fold, call, raise <amount> (150-9950), allin

> Betting round auto-completed
> Flop dealt!
Players: 2, Phase: FLOP
Board: 3❤ T♦ Q♦

💰 Pot: 200
Players:
  P1 (D): 9900 chips
  P2: 9900 chips
Available: turn, showdown, fold <player>

> Goodbye!"
`;
